@@ -14,7 +14,7 @@ KEYWORDS="amd64 x86 sparc"
 IUSE="avahi gnutls mysql"
 DEPEND="dev-libs/boost
 		>=dev-libs/libtprl-0.1.2
-        || ( >=dev-scheme/guile-1.6 dev-scheme/drscheme )
+        || ( >=dev-scheme/guile-1.6 dev-scheme/plt-scheme )
 		avahi? ( >=net-dns/avahi-0.6.0 )
 		gnutls? ( >=net-libs/gnutls-1.2.10 )
 		mysql? ( >=dev-db/mysql-4.0 )"
